# comparator

./: .travis.yml  CMakeLists.txt  main.cpp  pars.h  readme.md
